sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: not found: value inv
inv = true;
^AlgCombSort:6: error: not found: value inv
	inv = false;
        ^AlgCombSort:15: error: not found: value inv
			inv = true;
                        ^AlgCombSort:18: error: not found: value inv
} while (ecart > 1 || inv)
                      ^