sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
var ecart = getNombreValeurs();
inv = true;
do {
	inv = false;
	if (ecart>1) {
		ecart = (ecart.toDouble / 1.3).toInt
	}
	var i =0;
	while (i+ecart < getNombreValeurs()) {
		if (plusPetit(i+ecart,i)) {
			echange(i,i+ecart);
			i +=1;
			inv = true;
		}
	}
} while (ecart > 1 || inv)
}
